--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "firebase": "^11.0.1",
     "lucide-react": "^0.454.0",
     "msw": "^2.6.2",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
